<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Schedules Direct</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_status">Status</string>
    <string name="action_headends">Headends</string>
    <string name="action_lineups">Lineups</string>
    <string name="action_stations">Stations</string>
    <string name="action_programs">Programs</string>
    <string name="action_now_playing">Now playing</string>
    <string name="action_today">Today</string>
    <string name="action_download_assets">Download assets</string>
    <string name="postalCodeKey">postalCode</string>
    <string name="postalCodeTitle">Postal code</string>
    <string name="usernameKey">username</string>
    <string name="usernameTitle">User name</string>
    <string name="passwordKey">password</string>
    <string name="passwordTitle">Password</string>
    <string name="tokenKey">token</string>
    <string name="tokenTitle">Token</string>
    <string name="accountStatusKey">accountStatus</string>
    <string name="settingsTitle">Settings</string>
    <string name="statusTitle">Status</string>
    <string name="headendTitle">Headends</string>
    <string name="lineupTitle">Lineups</string>
    <string name="stationTitle">Stations</string>
    <string name="scheduleTitle">Schedule</string>
    <string name="programTitle">Program</string>
    <string name="searchTitle">Search</string>
</resources>

