<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainLayoutActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_status"
        android:title="@string/action_status"
        android:orderInCategory="110"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_headends"
        android:title="@string/action_headends"
        android:orderInCategory="120"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_lineups"
        android:title="@string/action_lineups"
        android:orderInCategory="130"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_stations"
        android:title="@string/action_stations"
        android:orderInCategory="140"
        android:showAsAction="never" />
</menu>
